--- a/arm_moveit_config/config/moveit_controllers.yaml
+++ b/arm_moveit_config/config/moveit_controllers.yaml
@@ -4,10 +4,10 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - arm_contoller
+    - arm_controller
     - gripper_controller
 
-  arm_contoller:
+  arm_controller:
     type: FollowJointTrajectory
     action_ns: follow_joint_trajectory
     default: true
