Made a new URDF with a fake gripper

--- a/arm_moveit_config/config/ros2_controllers.yaml
+++ b/arm_moveit_config/config/ros2_controllers.yaml
@@ -2,6 +2,7 @@
 controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
+    use_sim_time: true  # for gazebo simulation
 
     arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
