--- a/arm_moveit_config/config/joint_limits.yaml
+++ b/arm_moveit_config/config/joint_limits.yaml
@@ -8,33 +8,38 @@ default_acceleration_scaling_factor: 0.1
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
+  grip_joint:
+    has_velocity_limits: true
+    max_velocity: 1000
+    has_acceleration_limits: false
+    max_acceleration: 0
   joint_1:
     has_velocity_limits: true
-    max_velocity: 1000.0
+    max_velocity: 1000
     has_acceleration_limits: false
     max_acceleration: 0
   joint_2:
     has_velocity_limits: true
-    max_velocity: 1000.0
+    max_velocity: 1000
     has_acceleration_limits: false
     max_acceleration: 0
   joint_3:
     has_velocity_limits: true
-    max_velocity: 1000.0
+    max_velocity: 1000
     has_acceleration_limits: false
     max_acceleration: 0
   joint_4:
     has_velocity_limits: true
-    max_velocity: 1000.0
+    max_velocity: 1000
     has_acceleration_limits: false
     max_acceleration: 0
   joint_5:
     has_velocity_limits: true
-    max_velocity: 1000.0
+    max_velocity: 1000
     has_acceleration_limits: false
     max_acceleration: 0
   joint_6:
     has_velocity_limits: true
-    max_velocity: 1000.0
+    max_velocity: 1000
     has_acceleration_limits: false
     max_acceleration: 0
