--- a/arm_moveit_config/config/moveit_controllers.yaml
+++ b/arm_moveit_config/config/moveit_controllers.yaml
@@ -17,11 +17,12 @@ moveit_simple_controller_manager:
       - joint_3
       - joint_4
       - joint_5
+      - joint_6
     action_ns: follow_joint_trajectory
     default: true
   gripper_controller:
     type: GripperCommand
     joints:
-      - joint_6
+      - grip_joint
     action_ns: gripper_cmd
     default: true
