--- a/arm_moveit_config/config/ros2_controllers.yaml
+++ b/arm_moveit_config/config/ros2_controllers.yaml
@@ -2,7 +2,6 @@
 controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
-    use_sim_time: true  # for gazebo simulation
 
     arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
@@ -23,6 +22,7 @@ arm_controller:
       - joint_3
       - joint_4
       - joint_5
+      - joint_6
     command_interfaces:
       - position
       - velocity
@@ -31,4 +31,4 @@ arm_controller:
       - velocity
 gripper_controller:
   ros__parameters:
-    joint: joint_6
+    joint: grip_joint
