--- a/arm_moveit_config/config/moveit_controllers.yaml
+++ b/arm_moveit_config/config/moveit_controllers.yaml
@@ -4,10 +4,10 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - arm_controller
-    - gripper_controller
+    - arm_planning_group_controller
+    - gripper_group_controller
 
-  arm_controller:
+  arm_planning_group_controller:
     type: FollowJointTrajectory
     action_ns: follow_joint_trajectory
     default: true
@@ -18,11 +18,9 @@ moveit_simple_controller_manager:
       - joint_4
       - joint_5
       - joint_6
+  gripper_group_controller:
+    type: FollowJointTrajectory
     action_ns: follow_joint_trajectory
     default: true
-  gripper_controller:
-    type: GripperCommand
     joints:
       - grip_joint
-    action_ns: gripper_cmd
-    default: true
