--- a/arm_servoing/CMakeLists.txt
+++ b/arm_servoing/CMakeLists.txt
@@ -23,4 +23,13 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}
+)
 ament_package()
