--- a/arm_servoing/config/arm_simulated_config.yaml
+++ b/arm_servoing/config/arm_simulated_config.yaml
@@ -43,7 +43,7 @@ planning_frame: link_0  # The MoveIt planning frame. Often 'base_link' or 'world
 
 ## Other frames
 ee_frame_name: link_6_fake  # The name of the end effector link, used to return the EE pose
-robot_link_command_frame:  panda_link0  # commands must be given in the frame of a robot link. Usually either the base or end effector
+robot_link_command_frame:  link_0 # commands must be given in the frame of a robot link. Usually either the base or end effector
 
 ## Stopping behaviour
 incoming_command_timeout:  0.1  # Stop servoing if X seconds elapse without a new command
