--- a/arm_servoing/config/arm_simulated_config.yaml
+++ b/arm_servoing/config/arm_simulated_config.yaml
@@ -39,7 +39,7 @@ is_primary_planning_scene_monitor: true
 
 ## MoveIt properties
 move_group_name:  arm_planning_group  # Often 'manipulator' or 'arm'
-planning_frame: link_0  # The MoveIt planning frame. Often 'base_link' or 'world'
+planning_frame: world  # The MoveIt planning frame. Often 'base_link' or 'world'
 
 ## Other frames
 ee_frame_name: link_6_fake  # The name of the end effector link, used to return the EE pose
