--- a/arm_servoing/config/arm_simulated_config.yaml
+++ b/arm_servoing/config/arm_simulated_config.yaml
@@ -52,8 +52,9 @@ incoming_command_timeout:  0.1  # Stop servoing if X seconds elapse without a ne
 num_outgoing_halt_msgs_to_publish: 4
 
 ## Configure handling of singularities and joint limits
-lower_singularity_threshold:  17.0  # Start decelerating when the condition number hits this (close to singularity)
-hard_stop_singularity_threshold: 30.0 # Stop when the condition number hits this
+# TODO TUNE THESE PROPERTIES
+lower_singularity_threshold:  10.0  # Start decelerating when the condition number hits this (close to singularity)
+hard_stop_singularity_threshold: 100.0 # Stop when the condition number hits this
 joint_limit_margin: 0.1 # added as a buffer to joint limits [radians]. If moving quickly, make this larger.
 leaving_singularity_threshold_multiplier: 2.0 # Multiply the hard stop limit by this when leaving singularity (see https://github.com/ros-planning/moveit2/pull/620)
 
