--- a/arm_motor_controller/config/arm_controllers.yaml
+++ b/arm_motor_controller/config/arm_controllers.yaml
@@ -1,26 +1,67 @@
+# controller_manager:
+#   ros__parameters:
+#     update_rate: 10  # Hz
+
+#     joint_state_broadcaster:
+#       type: joint_state_broadcaster/JointStateBroadcaster
+#     arm_controller:
+#       type: arm_motor_controller/ArmSystemHardware
+
+# arm_controller:
+#   ros__parameters:
+#     # type: arm_motor_controller/ArmSystemHardware
+#     joints:
+#       - joint_1
+#       - joint_2
+#       - joint_3
+#       - joint_4
+#       - joint_5
+
+#     command_interfaces:
+#       - position
+#       - velocity
+
+#     state_interfaces:
+#       - position
+#       - velocity
+
 controller_manager:
   ros__parameters:
-    update_rate: 10  # Hz
+    update_rate: 100  # Hz
+
+    arm_planning_group_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
+
+    gripper_group_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
-    arm_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
 
-arm_controller:
+arm_planning_group_controller:
   ros__parameters:
-    type: arm_motor_controller/ArmSystemHardware
     joints:
       - joint_1
       - joint_2
       - joint_3
       - joint_4
       - joint_5
-
+      - joint_6
     command_interfaces:
       - position
       - velocity
-
+    state_interfaces:
+      - position
+      - velocity
+gripper_group_controller:
+  ros__parameters:
+    joints:
+      - grip_joint
+    command_interfaces:
+      - position
+      - velocity
     state_interfaces:
       - position
       - velocity
