Current Launch progress

--- a/arm_motor_controller/config/arm_controllers.yaml
+++ b/arm_motor_controller/config/arm_controllers.yaml
@@ -65,3 +65,14 @@ gripper_group_controller:
     state_interfaces:
       - position
       - velocity
+joint_state_broadcaster:
+  ros__parameters:
+    extra_joints: '{}'
+    interfaces: '{}'
+    joints: '{}'
+    map_interface_to_joint_state:
+      effort: effort
+      position: position
+      velocity: velocity
+    use_local_topics: false
+    use_urdf_to_filter: true
