--- a/arm_motor_controller/config/arm_controllers.yaml
+++ b/arm_motor_controller/config/arm_controllers.yaml
@@ -1,30 +1,3 @@
-# controller_manager:
-#   ros__parameters:
-#     update_rate: 10  # Hz
-
-#     joint_state_broadcaster:
-#       type: joint_state_broadcaster/JointStateBroadcaster
-#     arm_controller:
-#       type: arm_motor_controller/ArmSystemHardware
-
-# arm_controller:
-#   ros__parameters:
-#     # type: arm_motor_controller/ArmSystemHardware
-#     joints:
-#       - joint_1
-#       - joint_2
-#       - joint_3
-#       - joint_4
-#       - joint_5
-
-#     command_interfaces:
-#       - position
-#       - velocity
-
-#     state_interfaces:
-#       - position
-#       - velocity
-
 controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
@@ -32,10 +5,8 @@ controller_manager:
     arm_planning_group_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-
     gripper_group_controller:
       type: joint_trajectory_controller/JointTrajectoryController
-
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
@@ -55,6 +26,7 @@ arm_planning_group_controller:
     state_interfaces:
       - position
       - velocity
+      
 gripper_group_controller:
   ros__parameters:
     joints:
@@ -65,14 +37,21 @@ gripper_group_controller:
     state_interfaces:
       - position
       - velocity
+
 joint_state_broadcaster:
   ros__parameters:
-    extra_joints: '{}'
-    interfaces: '{}'
-    joints: '{}'
-    map_interface_to_joint_state:
-      effort: effort
-      position: position
-      velocity: velocity
-    use_local_topics: false
-    use_urdf_to_filter: true
+#     extra_joints: '{}'
+#     interfaces: '{}'
+    joints: 
+      - joint_1
+      - joint_2
+      - joint_3
+      - joint_4
+      - joint_5
+      - joint_6
+      - grip_joint
+#     map_interface_to_joint_state:
+#       position: position
+#       velocity: velocity
+#     use_local_topics: false
+#     use_urdf_to_filter: true
