--- a/arm_motor_controller/CMakeLists.txt
+++ b/arm_motor_controller/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.8)
 project(arm_motor_controller)
 
+set(CMAKE_CXX_STANDARD 17) # Set the desired C++ standard (e.g., 11, 14, 17, 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
