--- a/arm_motor_controller/config/arm_controllers.yaml
+++ b/arm_motor_controller/config/arm_controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 100  # Hz
+    update_rate: 30  # Hz
 
     arm_planning_group_controller:
       type: joint_trajectory_controller/JointTrajectoryController
@@ -20,6 +20,10 @@ arm_planning_group_controller:
       - joint_4
       - joint_5
       - joint_6
+    constraints:
+      joint_1:
+        goal: 0.02
+
     command_interfaces:
       - position
       - velocity
