Launch is starting to work, bad hack with copying matt's files from other branch for testing. Still have to change some of the r6bot example stuff. Some stuff is mostly working partially i think

--- a/marge/CMakeLists.txt
+++ b/marge/CMakeLists.txt
@@ -62,6 +62,13 @@ pluginlib_export_plugin_description_file(controller_interface marge.xml)
 
 
 
+###########
+# Install #
+###########
+install(
+    DIRECTORY launch config
+    DESTINATION share/${PROJECT_NAME}
+)
 
 
 
