Added fake gripper to the arm as the _sim.urdf

--- a/arm_moveit_config_old/package.xml
+++ b/arm_moveit_config_old/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>arm_moveit_config</name>
+  <name>arm_moveit_config_old</name>
   <version>0.3.0</version>
   <description>
      An automatically generated package with all the configuration and launch files for using the arm_end_effector with the MoveIt Motion Planning Framework
