--- a/marge/package.xml
+++ b/marge/package.xml
@@ -8,16 +8,18 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>generate_parameter_library</build_depend>
 
   <depend>backward_ros</depend>
   <depend>control_msgs</depend>
   <depend>controller_interface</depend>
   <depend>hardware_interface</depend>
-  <depend>kdl_parser</depend>
-  <depend>pluginlib</depend>
   <depend>rclcpp_lifecycle</depend>
   <depend>rclcpp</depend>
+  <depend>pluginlib</depend>
   <depend>rcpputils</depend>
+  <depend>kdl_parser</depend>
+
 
 
   <exec_depend>controller_manager</exec_depend>
