--- a/arm_motor_controller/config/arm_controllers.yaml
+++ b/arm_motor_controller/config/arm_controllers.yaml
@@ -23,6 +23,15 @@ arm_planning_group_controller:
     constraints:
       joint_1:
         goal: 0.02
+      joint_3:
+        goal: 0.02
+    gains:
+      joint_3:
+        d: 0.0
+        ff_velocity_scale: 0.0
+        i: 0.0
+        i_clamp: 1.0
+        p: 5.0
 
     command_interfaces:
       - position
@@ -30,6 +39,7 @@ arm_planning_group_controller:
     state_interfaces:
       - position
       - velocity
+    interpolation_method: splines
       
 gripper_group_controller:
   ros__parameters:
@@ -41,6 +51,7 @@ gripper_group_controller:
     state_interfaces:
       - position
       - velocity
+    interpolation_method: splines
 
 joint_state_broadcaster:
   ros__parameters:
