--- a/arm_moveit_config/package.xml
+++ b/arm_moveit_config/package.xml
@@ -42,7 +42,7 @@
   <exec_depend>rviz_default_plugins</exec_depend>
   <exec_depend>sw_arm_desc</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
-  <exec_depend>warehouse_ros_mongo</exec_depend>
+  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->
   <exec_depend>xacro</exec_depend>
 
 
